--- a/k3s/registry-deployment.yaml
+++ b/k3s/registry-deployment.yaml
@@ -17,4 +17,11 @@ spec:
         image: registry:2
         ports:
         - containerPort: 5000
-
+      # UNCOMMENT TO USE NFS FOR REGISTRY STORAGE
+      #   volumeMounts:
+      #   - name: registry-storage
+      #     mountPath: /var/lib/registry
+      # volumes:
+      # - name: registry-storage
+      #   persistentVolumeClaim:
+      #     claimName: nfs-pvc
